# fall2022_ece6460_examples

./: LICENSE  README.md
ece6460_ekf_example/: CMakeLists.txt  package.xml  setup.py
ece6460_ekf_example/cfg/: EkfExample.cfg
ece6460_ekf_example/launch/: ekf_example.launch
ece6460_ekf_example/rviz/: rviz_config.rviz
ece6460_ekf_example/src/: EkfExample.cpp  EkfExample.hpp  ekf_example_node.cpp
ece6460_ekf_example/src/ece6460_ekf_example/: rtk_gps_path.py
ece6460_gps_example/: CMakeLists.txt  package.xml
ece6460_gps_example/launch/: gps_transform_example.launch
ece6460_gps_example/src/: GpsTransformExample.cpp  GpsTransformExample.hpp  gps_transform_example_node.cpp
ece6460_lane_detection_example/: CMakeLists.txt  package.xml
ece6460_lane_detection_example/cfg/: LaneDetection.cfg
ece6460_lane_detection_example/launch/: lane_detection.launch
ece6460_lane_detection_example/rviz/: lane_detection.rviz
ece6460_lane_detection_example/src/: LaneDetection.cpp  LaneDetection.hpp  lane_detection_example.cpp
ece6460_launch_example/: CMakeLists.txt  package.xml
ece6460_launch_example/launch/: param_loader.launch
ece6460_launch_example/src/: ParamLoader.cpp  ParamLoader.hpp  param_loader_node.cpp
ece6460_mono_cal_example/: CMakeLists.txt  package.xml
ece6460_mono_cal_example/launch/: mono_camera_cal.launch  mono_camera_playback.launch
ece6460_opencv_example/: CMakeLists.txt  package.xml
ece6460_opencv_example/cfg/: HsvExample.cfg
ece6460_opencv_example/launch/: hsv_example.launch
ece6460_opencv_example/src/: HsvExample.cpp  HsvExample.hpp  hsv_example_node.cpp
ece6460_pointcloud_example/: CMakeLists.txt  package.xml
ece6460_pointcloud_example/cfg/: PointCloudExample.cfg
ece6460_pointcloud_example/launch/: cluster_example.launch  passthrough_example.launch
ece6460_pointcloud_example/rviz/: example.rviz
ece6460_pointcloud_example/src/: ClusterExample.cpp  ClusterExample.hpp  PassthroughExample.cpp  PassthroughExample.hpp  cluster_example_node.cpp  passthrough_example_node.cpp
ece6460_radar_example/: CMakeLists.txt  package.xml
ece6460_radar_example/cfg/: RadarExample.cfg
ece6460_radar_example/launch/: radar_example.launch
ece6460_radar_example/rviz/: rviz_config.rviz
ece6460_radar_example/src/: RadarExampleNode.cpp  RadarExampleNode.hpp  radar_example_node.cpp
ece6460_rosbag_examples/: CMakeLists.txt  package.xml
ece6460_rosbag_examples/src/: DataGeneratorNode.cpp  DataGeneratorNode.hpp  TimeAnalysisNode.cpp  TimeAnalysisNode.hpp  data_generator_node.cpp  time_analysis_node.cpp
ece6460_stereo_example/: CMakeLists.txt  package.xml
ece6460_stereo_example/launch/: sim_stereo.launch  stereo_camera_cal.launch  stereo_camera_playback.launch
ece6460_stereo_example/rviz/: rviz_config.rviz  sim_config.rviz
ece6460_stereo_example/urdf/: stereo_camera.urdf.xacro  vehicle_model.urdf.xacro
ece6460_stereo_example/yaml/: sim_params.yaml  sim_stereo_scenario.yaml
ece6460_tf_examples/: CMakeLists.txt  package.xml
ece6460_tf_examples/launch/: dynamic_tf.launch  static_tf.launch
ece6460_tf_examples/src/: TfLookupExample.cpp  TfLookupExample.hpp  TfPubExample.cpp  TfPubExample.hpp  tf_lookup_example.cpp  tf_pub_example.cpp
ece6460_transform_examples/: CMakeLists.txt  package.xml
ece6460_transform_examples/src/: transform_example1.cpp  transform_example2.cpp
ece6460_ulc_example/: CMakeLists.txt  package.xml
ece6460_ulc_example/cfg/: UlcExample.cfg
ece6460_ulc_example/launch/: run_simulator.launch
ece6460_ulc_example/src/: UlcExampleNode.cpp  UlcExampleNode.hpp  ulc_example_node.cpp
ece6460_vector_to_quat/: CMakeLists.txt  package.xml
ece6460_vector_to_quat/cfg/: VectorToQuat.cfg
ece6460_vector_to_quat/launch/: vector_to_quat.launch
ece6460_vector_to_quat/rviz/: vector_to_quat.rviz
ece6460_vector_to_quat/src/: VectorToQuat.cpp  VectorToQuat.hpp  vector_to_quat_node.cpp
template_files/: CMakeLists.txt  Template.cpp  Template.hpp  TemplateCfg.cfg  package.xml  template_node.cpp
