<?xml version="1.0"?>
<package format="2">
  <name>ece6460_lane_detection_example</name>
  <version>0.0.0</version>
  <description>
    Example of detecting and curve fitting lane markings using a monocular camera system.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>

</package>
