<?xml version="1.0"?>
<package format="2">
  <name>ece6460_launch_example</name>
  <version>0.0.0</version>
  <description>
    Example for how to write simple launch files and set parameters in them.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
