<?xml version="1.0"?>
<package format="2">
  <name>ece6460_opencv_example</name>
  <version>0.0.0</version>
  <description>
    Example illustrating basic OpenCV functions
    and the properties of the HSV colorspace.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

</package>
