<?xml version="1.0"?>
<package format="2">
  <name>ece6460_radar_example</name>
  <version>0.0.0</version>
  <description>
    Simple example of applying velocity compensation and filtering to RADAR objects.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>conti_radar_msgs</depend>
  <depend>avs_lecture_msgs</depend>
</package>
