<?xml version="1.0"?>
<package format="2">
  <name>ece6460_rosbag_examples</name>
  <version>0.0.0</version>
  <description>
    Examples to explore the consequences of different clock sources
    and different data playback settings from bag files.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
