<?xml version="1.0"?>
<package format="2">
  <name>ece6460_transform_examples</name>
  <version>0.0.0</version>
  <description>
    Examples of using the TF library
    to perform coordinate frame transformations
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
