<?xml version="1.0"?>
<package format="2">
  <name>ece6460_ulc_example</name>
  <version>0.0.0</version>
  <description>
    Example for how to publish a UlcCmd topic to control
    the speed and steering of the Dataspeed ADAS Kit.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>dataspeed_ulc_msgs</depend>
</package>
