<?xml version="1.0"?>
<package format="2">
  <name>ece6460_vector_to_quat</name>
  <version>0.0.0</version>
  <description>
    Visualize the process to construct quaternion rotation that aligns with a vector
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
</package>
