<?xml version="1.0"?>
<package format="2">
  <!--
  [Required] The name of the package goes in the <name> tag
  -->
  <name>new_package</name>
  
  <!--
  [Required] The following tags are required, but are only
             meaningful when releasing binaries into the
             ROS buildfarm
  -->
  <version>0.0.0</version>
  <description>
      A template to get you started!
  </description>
  <license>TODO</license>
  <maintainer email="your_email@xyz.com">Your Name</maintainer>
  
  <!--
  [Required] Make this package depend on the catkin build tool
  -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--
  [Required if using C++] Make this package depend on the roscpp libraries
  -->
  <depend>roscpp</depend>
</package>
